--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,13 @@ project(raytracer
     
 enable_testing()
 
+add_library(trace
+    src/colors.cpp
+    )
+
 target_include_directories(trace PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE.include>
+    $<INSTALL_INTERFACE:include>
     )
 
 add_executable(raytracer
