FIX GDLIB IN CMAKE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.12)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-project(helloworld
+project(raytracer
     VERSION 1.0
     DESCRIPTION "Hello world in C++"
     LANGUAGES CXX
