--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ project(raytracer
 enable_testing()
 
 add_library(trace
-    src/raytracer.cpp
+    src/hdrimage.cpp
     )
 
 target_include_directories(trace PUBLIC
@@ -21,22 +21,19 @@ target_include_directories(trace PUBLIC
 
 include(FindPkgConfig)
 pkg_check_modules(GDLIB REQUIRED gdlib)
-include_directories(${GDLIB_INCLUDE_DIRS})
-link_directories(${GDLIB_LIBRARY_DIRS})
-link_libraries(${GDLIB_LIBRARIES})
+
+#include_directories(${GDLIB_INCLUDE_DIRS})
+#link_directories(${GDLIB_LIBRARY_DIRS})
+#link_libraries(${GDLIB_LIBRARIES})
 
 add_executable(raytracer
     src/raytracer.cpp
     )
 
-#target_include_directories(raytracer PUBLIC ${GDLIB_INCLUDE_DIRS})
-#message(STATUS "${GDLIB_INCLUDE_DIRS}")
-#target_compile_options(raytracer PUBLIC ${GDLIB_CFLAGS})
+target_include_directories(raytracer PUBLIC ${GDLIB_INCLUDE_DIRS})
+target_compile_options(raytracer PUBLIC ${GDLIB_CFLAGS})
 #target_link_directories(raytracer ${GDLIB_LIBRARY_DIRS})
-#target_link_libraries(raytracer trace) #va aggiunto PUBLIC?
-#message(STATUS "${GDLIB_LIBRARIES}")
-
-target_link_libraries(raytracer PUBLIC trace)
+target_link_libraries(raytracer ${GDLIB_LIBRARIES} trace) #va aggiunto PUBLIC?
 
 add_executable(colortest
     test/colors.cpp
