--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,13 +17,13 @@ jobs:
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
-    
-    before_install:
-    - sudo apt install libgd-dev
 
     steps:
     - uses: actions/checkout@v2
 
+    - name: Install dependencies
+      run: "sudo apt install libgd-dev"
+        
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
