--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,8 +24,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Install dependencies
+    - name: Install dependencies (Linux)
       run: "sudo apt install libgd-dev"
+      if: matrix.os == 'ubuntu-latest'
+      
+    - name: Install dependencies (MacOS)
+      run: "brew install gd"
+      if: matrix.os == 'macos-latest'
         
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
