Re-arrange write_ldr_image in hdrimage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,10 +34,16 @@ add_executable(raytracer
     src/raytracer.cpp
     )
 
-target_include_directories(raytracer PUBLIC ${GDLIB_INCLUDE_DIRS})
-target_link_directories(raytracer PUBLIC ${GDLIB_LIBRARY_DIRS})
-target_compile_options(raytracer PUBLIC ${GDLIB_CFLAGS})
-target_link_libraries(raytracer PUBLIC ${GDLIB_LIBRARIES} trace) #va aggiunto PUBLIC?
+target_include_directories(trace PUBLIC ${GDLIB_INCLUDE_DIRS})
+target_link_directories(trace PUBLIC ${GDLIB_LIBRARY_DIRS})
+target_compile_options(trace PUBLIC ${GDLIB_CFLAGS})
+target_link_libraries(trace PUBLIC ${GDLIB_LIBRARIES})
+
+#target_include_directories(raytracer PUBLIC ${GDLIB_INCLUDE_DIRS})
+#target_link_directories(raytracer PUBLIC ${GDLIB_LIBRARY_DIRS})
+#target_compile_options(raytracer PUBLIC ${GDLIB_CFLAGS})
+#target_link_libraries(raytracer PUBLIC ${GDLIB_LIBRARIES} trace)
+target_link_libraries(raytracer PUBLIC trace)
 
 
 # TESTS:
