Create geometry library (#1)
* Add Point tests and Normal struct

* Implement copy and move constructors

* Add are_xyz_close template

* Add Transformation struct

* Create trasformation.h

* Add src/transformation.cpp

* Add CI build

* Add src/transformation.cpp

* Add translation and tests

* Add operator* for transformations and tests

* Add scaling and rotations with tests

* Smart tests

* Update cmake.yml

Co-authored-by: Elisa Legnani <elegnani97@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ enable_testing()
 # MY LIBRARIES DECLARATIONS:
 add_library(trace
     src/hdrimage.cpp
+    src/transformation.cpp
     )
+
 
 # PATH TO MY LIBRARIES:
 target_include_directories(trace PUBLIC
@@ -77,6 +79,17 @@ target_link_libraries(geometrytest PUBLIC trace)
 
 add_test(NAME geometrytest
     COMMAND geometrytest
+    )
+
+# transformationtest
+add_executable(transformationtest
+    test/transformation.cpp
+    )
+
+target_link_libraries(transformationtest PUBLIC trace)
+
+add_test(NAME transformationtest
+    COMMAND transformationtest
     )
     
 # COMPILER FEAUTURES:
