Add OrthogonalCamera struct and tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,17 @@ target_link_libraries(raytest PUBLIC trace)
 add_test(NAME raytest
     COMMAND raytest
     )
+
+# camera
+add_executable(cameratest
+    test/camera.cpp
+    )
+
+target_link_libraries(cameratest PUBLIC trace)
+
+add_test(NAME cameratest
+    COMMAND cameratest
+    )
     
 # COMPILER FEAUTURES:
 target_compile_features(raytracer PUBLIC cxx_std_17)
