--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,7 +34,7 @@ jobs:
       
     - name: Install Catch2 (MacOS)
       run: "brew install catch2"
-      if: matrix.os == 'ubuntu-latest'
+      if: matrix.os == 'macos-latest'
         
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
