Add Catch2 testing to geometrytest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,7 @@ add_test(NAME colortest
 add_executable(hdrimagetest
     test/hdrimage.cpp
     )
-target_link_libraries(hdrimagetest PUBLIC trace)
+target_link_libraries(hdrimagetest PUBLIC trace PRIVATE Catch2::Catch2)
 
 add_test(NAME hdrimagetest
     COMMAND hdrimagetest
@@ -68,7 +68,7 @@ add_executable(geometrytest
     test/geometry.cpp
     )
 
-target_link_libraries(geometrytest PUBLIC trace)
+target_link_libraries(geometrytest PUBLIC trace PRIVATE Catch2::Catch2)
 
 add_test(NAME geometrytest
     COMMAND geometrytest
@@ -79,7 +79,7 @@ add_executable(transformationtest
     test/transformation.cpp
     )
 
-target_link_libraries(transformationtest PUBLIC trace)
+target_link_libraries(transformationtest PUBLIC trace PRIVATE Catch2::Catch2)
 
 add_test(NAME transformationtest
     COMMAND transformationtest
@@ -90,7 +90,7 @@ add_executable(raytest
     test/ray.cpp
     )
 
-target_link_libraries(raytest PUBLIC trace)
+target_link_libraries(raytest PUBLIC trace PRIVATE Catch2::Catch2)
 
 add_test(NAME raytest
     COMMAND raytest
@@ -101,7 +101,7 @@ add_executable(cameratest
     test/camera.cpp
     )
 
-target_link_libraries(cameratest PUBLIC trace)
+target_link_libraries(cameratest PUBLIC trace PRIVATE Catch2::Catch2)
 
 add_test(NAME cameratest
     COMMAND cameratest
@@ -112,7 +112,7 @@ add_executable(imagetracertest
     test/imagetracer.cpp
     )
 
-target_link_libraries(imagetracertest PUBLIC trace)
+target_link_libraries(imagetracertest PUBLIC trace PRIVATE Catch2::Catch2)
 
 add_test(NAME imagetracertest
     COMMAND imagetracertest
