Create pathtracing library (#12)
* Add Pigments

* Updated shapes.h with Material

* Add BRDF and Material

* Add WHITE and BLACK

* Add PCG random number generator

* Add DiffuseBRDF

* Add MIT Licence heading

* Add renderer to demo

* Add OnOffRenderer and FlatRenderer

* Move HitRecord to shapes.h

* Add ONB

* Complete FlatRenderer with material in HitRecord

* Update generate-image.sh with renderer

* Add PathTracer

* Move functions implementation to materials.cpp

* Add operations for Normal

* Add SpecularBRDF

* Add example demo animation for onoff and flat renderers

* Add documentation

* Add complex demo image using pathtracer

* Update README.md

* Fix issue #15 (#16): Remove redundancy in ONB constructor

Co-authored-by: adelezaini <59051647+adelezaini@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(trace
     src/hdrimage.cpp
     src/transformation.cpp
     src/shapes.cpp
+    src/materials.cpp
     src/catch_amalgamated.cpp
     )
 
@@ -142,5 +143,38 @@ add_test(NAME worldtest
     COMMAND worldtest
     )
 
+# materialtest
+add_executable(materialtest
+    test/materials.cpp
+    )
+
+target_link_libraries(materialtest PUBLIC trace)
+
+add_test(NAME materialtest
+    COMMAND materialtest
+    )
+
+# pcgtest
+add_executable(pcgtest
+    test/pcg.cpp
+    )
+
+target_link_libraries(pcgtest PUBLIC trace)
+
+add_test(NAME pcgtest
+    COMMAND pcgtest
+    )
+
+# rendertest
+add_executable(rendertest
+    test/render.cpp
+    )
+
+target_link_libraries(rendertest PUBLIC trace)
+
+add_test(NAME rendertest
+    COMMAND rendertest
+    )
+    
 # COMPILER FEAUTURES:
 target_compile_features(raytracer PUBLIC cxx_std_17)
