--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,14 +15,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [macos-latest]
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: Install dependencies (Linux)
-      run: "sudo apt install libgd-dev"
-      if: matrix.os == 'ubuntu-latest'
       
     - name: Install dependencies (MacOS)
       run: "brew install gd"
