--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,10 +15,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [ubuntu-latest,macos-latest]
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Install dependencies (Linux)
+      run: "sudo apt install libgd-dev"
+      if: matrix.os == 'ubuntu-latest'
       
     - name: Install dependencies (MacOS)
       run: "brew install gd"
