Create scenefiles library (#17)
* Add Token struct

* Add InputStream struct

* Add expect_* functions

* Add Scene struct

* Implement GrammarError

* Add parse_* functions

* Enhance camera.h

* Add parse_scene

* Update exceptions

* Implement parser in raytracer.cpp

* Add another PFM image

* Add args library

* Update raytracer help command and set default variables

* Update demo image

* Update generate-image.sh

Co-authored-by: adelezaini <59051647+adelezaini@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(trace
     src/shapes.cpp
     src/materials.cpp
     src/catch_amalgamated.cpp
+    src/scene.cpp
     )
 
 # PATH TO MY LIBRARIES:
@@ -175,6 +176,17 @@ target_link_libraries(rendertest PUBLIC trace)
 add_test(NAME rendertest
     COMMAND rendertest
     )
-    
+
+# scenetest
+add_executable(scenetest
+    test/scene.cpp
+    )
+
+target_link_libraries(scenetest PUBLIC trace)
+
+add_test(NAME scenetest
+    COMMAND scenetest
+    )
+
 # COMPILER FEAUTURES:
 target_compile_features(raytracer PUBLIC cxx_std_17)
