--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
-title: [Photorealistic Rendering]
+title: Photorealistic Rendering
+description: A simple raytracer for generating photorealistic images written in C++
